--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>ES2015</title>
 </head>
 <body>
+  <button id="action">Do something</button>
+  <button id="action2">Do something arrow</button>
   <script type="text/javascript" src="/build/bundle.js"></script>
 </body>
 </html>
